--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -15,11 +15,11 @@
    },
    "outputs": [],
    "source": [
-    "# Make virtual environment. Tested on python3.6, python3.7. Run in terminal, not in Jupyter. TODO: Python3.8+ requires Tensorflow >=2 migration\n",
+    "# Make virtual environment. Tested on python3.6+. Run in terminal, not in Jupyter.\n",
     "python3.7 -m venv tutorial-env\n",
     "source tutorial-env/bin/activate\n",
     "\n",
-    "# Install requirements\n",
+    "# Install COBS requirements\n",
     "pip3 install -r requirements.txt\n",
     "\n",
     "# point jupyter to virtualenv \n",
@@ -27,16 +27,6 @@
     "python -m ipykernel install --user --name=tutorial_env\n",
     "\n",
     "# Now, restart jupyter notebook and change the Kernel by selecting Kernel > Change kernel > tutorial_env"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import tensorflow as tf\n",
-    "print(tf.__version__) # should be 1.15"
    ]
   },
   {
@@ -54,12 +44,15 @@
    "source": [
     "# Imports\n",
     "import numpy as np\n",
+    "import json\n",
+    "from copy import deepcopy\n",
     "\n",
     "from ope.envs.graph import Graph\n",
-    "from ope.models.basics import BasicPolicy\n",
+    "from ope.policies.basics import BasicPolicy\n",
     "\n",
     "from ope.experiment_tools.experiment import ExperimentRunner, analysis\n",
-    "from ope.experiment_tools.config import Config"
+    "from ope.experiment_tools.config import Config\n",
+    "from ope.experiment_tools.factory import setup_params"
    ]
   },
   {
@@ -68,6 +61,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get configuration\n",
+    "configuration_filename = \"tabular_experiment_cfg.json\"\n",
+    "with open('cfgs/{0}'.format(configuration_filename), 'r') as f:\n",
+    "    param = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param = setup_params(param) # Setup parameters\n",
     "runner = ExperimentRunner() # Instantiate a runner for an experiment"
    ]
   },
@@ -79,23 +85,9 @@
    "source": [
     "# run 5 experiments, each with a varying number of trajectories\n",
     "for N in range(5):\n",
-    "\n",
-    "    # basic configuration with varying number of trajectories\n",
-    "    configuration = {\n",
-    "        \"gamma\": 0.98,                # discount factor\n",
-    "        \"horizon\": 4,                 # horizon of the environment\n",
-    "        \"base_policy\": .8,            # \\pi_b(a = 0)\n",
-    "        \"eval_policy\": .2,            # \\pi_e(a = 0)\n",
-    "        \"stochastic_env\": True,       # Make environment have stochastic transitions\n",
-    "        \"stochastic_rewards\": False,  # Make environment have stochastic rewards\n",
-    "        \"sparse_rewards\": False,      # Make environment have sparse rewards\n",
-    "        \"num_traj\": 8*2**N,           # Number of trajectories to collect from pi_b\n",
-    "        \"is_pomdp\": False,            # Make environment POMDP\n",
-    "        \"pomdp_horizon\": 2,           # Horizon of POMDP if is_pomdp is True\n",
-    "        \"seed\": 1000,                 # Seed\n",
-    "        \"modeltype\": \"tabular\",       # Q function model type\n",
-    "        \"to_regress_pi_b\": False,     # pi_b unknown?\n",
-    "    }\n",
+    "    \n",
+    "    configuration = deepcopy(param['experiment']) # Make sure to deepcopy as to never change original\n",
+    "    configuration['num_traj'] = 8*2**N # Increase dataset size\n",
     "\n",
     "    # store these credentials in an object\n",
     "    cfg = Config(configuration)\n",
@@ -134,10 +126,8 @@
     "        'processor': processor,\n",
     "        'absorbing_state': absorbing_state\n",
     "    })\n",
+    "    cfg.add({'models': param['models']})\n",
     "\n",
-    "    # Decide which OPE methods to run.\n",
-    "    # Currently only all is available\n",
-    "    cfg.add({'models': 'all'})\n",
     "\n",
     "    # Add the configuration\n",
     "    runner.add(cfg)"
@@ -184,8 +174,8 @@
    "outputs": [],
    "source": [
     "from ope.envs.gridworld import Gridworld\n",
-    "from ope.models.epsilon_greedy_policy import EGreedyPolicy\n",
-    "from ope.models.tabular_model import TabularPolicy"
+    "from ope.policies.epsilon_greedy_policy import EGreedyPolicy\n",
+    "from ope.policies.tabular_model import TabularPolicy"
    ]
   },
   {
@@ -194,6 +184,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get configuration\n",
+    "configuration_filename = \"experiment_cfg.json\"\n",
+    "with open('cfgs/{0}'.format(configuration_filename), 'r') as f:\n",
+    "    param = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param = setup_params(param)\n",
     "runner = ExperimentRunner() # make new runner"
    ]
   },
@@ -203,23 +206,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for N in range(5): # We suggest running this with a GPU or changing this to range(1)\n",
-    "    configuration = {\n",
-    "        \"gamma\": 0.98,                # discount factor\n",
-    "        \"horizon\": 5,                 # horizon of the environment\n",
-    "        \"base_policy\": .8,            # Probability of deviation from epsilon-greedy for base policy\n",
-    "        \"eval_policy\": .2,            # Probability of deviation from epsilon-greedy for eval policy\n",
-    "        \"stochastic_env\": True,       # Make environment have stochastic transitions       \n",
-    "        \"stochastic_rewards\": False,  # Make environment have stochastic rewards\n",
-    "        \"sparse_rewards\": False,      # Make environment have sparse rewards\n",
-    "        \"num_traj\": 8*2**N,           # Number of trajectories to collect from pi_b\n",
-    "        \"seed\": 1000,                 # Seed\n",
-    "        \"to_regress_pi_b\": False,     # pi_b unknown?\n",
-    "        \"frameskip\": 1,               # (x_t, a, r, x_{t+frameskip}). Apply action \"a\" frameskip number of times\n",
-    "        \"frameheight\": 1,             # (x_{t:t+frameheight}, a, r, x_{t+1:t+1+frameheight}). State is consider a concatenation of frameheight number of states\n",
-    "        \"modeltype\": 'conv',          # Q function model type, Convolutional NN\n",
-    "        \"Qmodel\": 'conv1',            # Q function NN definition (TODO: should be moved) \n",
-    "    }\n",
+    "for N in range(5):\n",
+    "    configuration = deepcopy(param['experiment']) # Make sure to deepcopy as to never change original\n",
+    "    configuration['num_traj'] = 8*2**N # Increase dataset size\n",
     "\n",
     "    # store these credentials in an object\n",
     "    cfg = Config(configuration)\n",
@@ -274,7 +263,7 @@
     "        'absorbing_state': absorbing_state,\n",
     "        'convert_from_int_to_img': to_grid, # if environment state is an int, can convert to image through this function\n",
     "    })\n",
-    "    cfg.add({'models': 'all'})\n",
+    "    cfg.add({'models': param['models']})\n",
     "\n",
     "    runner.add(cfg)"
    ]
@@ -321,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
