--- a/Tutorial.ipynb
+++ b/Tutorial.ipynb
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "# Get configuration\n",
-    "configuration_filename = \"tabular_experiment_cfg.json\"\n",
+    "configuration_filename = \"tabular_example_cfg.json\"\n",
     "with open('cfgs/{0}'.format(configuration_filename), 'r') as f:\n",
     "    param = json.load(f)"
    ]
@@ -185,7 +185,7 @@
    "outputs": [],
    "source": [
     "# Get configuration\n",
-    "configuration_filename = \"experiment_cfg.json\"\n",
+    "configuration_filename = \"nn_example_cfg.json\"\n",
     "with open('cfgs/{0}'.format(configuration_filename), 'r') as f:\n",
     "    param = json.load(f)"
    ]
